force-app/main/default/objects/WT_Wear_Test_Participant__c/WT_Wear_Test_Participant__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Wear Test Products and Participants (formerly Wear Testers).
This object contains the list of testers associated to a Wear Test Product.
Object name formerly Product Tester</description>
    <label>Wear Test Participant</label>
    <nameField>
        <label>Wear Test Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wear Test Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>