force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <description>The check number needed by Finance to send compensation to the tester.</description>
    <inlineHelpText>The check number needed by Finance to send compensation to the tester.</inlineHelpText>
    <label>Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>