force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Check_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Payment_Date__c</fullName>
    <description>The check payment date needed by Finance to send compensation to the tester.</description>
    <inlineHelpText>The check payment date needed by Finance to send compensation to the tester.</inlineHelpText>
    <label>Check Payment Date</label>
    <type>Date</type>
</CustomField>