force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <description>Identifies if the tester wants compensation.</description>
    <inlineHelpText>Identifies if the tester wants compensation.</inlineHelpText>
    <label>Compensation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Keeping Footwear</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Send Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>