force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amount__c</fullName>
    <description>Compensation amount that Red Wing Shoes sends to the testers after the completion of a test.</description>
    <inlineHelpText>Compensation amount that Red Wing Shoes sends to the testers after the completion of a test.</inlineHelpText>
    <label>Compensation Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>