force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Describe_the_Terrain__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_Terrain__c</fullName>
    <description>Survey Question: Please describe the terrain that you used the product on and the region of the US you used the product in.</description>
    <inlineHelpText>Survey Question: Please describe the terrain that you used the product on and the region of the US you used the product in.</inlineHelpText>
    <label>Describe the Terrain and Region</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>