force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <description>Field establishing the junction object relationship with Wear Tester.
Renamed from Wear Tester</description>
    <inlineHelpText>Link to the Wear Tester.

Enter any text into the Wear Test Participant Name field.
A workflow will update the name to Participant Name-Wear Test</inlineHelpText>
    <label>Participant</label>
    <referenceTo>WT_Participant__c</referenceTo>
    <relationshipLabel>Wear Test Participants</relationshipLabel>
    <relationshipName>WT_Product_Testers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>