force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Rate_Overall_Performance__c.field-meta.xml
<CustomField>
    <fullName>Rate_Overall_Performance__c</fullName>
    <description>Survey Question: How would you rate the overall performance?</description>
    <inlineHelpText>Survey Question: How would you rate the overall performance?</inlineHelpText>
    <label>Rate Overall Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>