force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Rate_the_Fit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_Fit_Comments__c</fullName>
    <description>Survey Question:  How would you rate the &apos;fit&apos; of the product?</description>
    <inlineHelpText>Survey Question:  How would you rate the &apos;fit&apos; of the product?</inlineHelpText>
    <label>Rate the Fit - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>