force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Rate_the_Traction__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_Traction__c</fullName>
    <description>Survey Question: How would you rate the traction of the product?</description>
    <inlineHelpText>Survey Question: How would you rate the traction of the product?</inlineHelpText>
    <label>Rate the Traction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>