force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Test_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_End_Date__c</fullName>
    <formula>Wear_Test__r.Test_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test End Date</label>
    <type>Date</type>
</CustomField>