force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Type_of_Test__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Test__c</fullName>
    <formula>TEXT(Wear_Test__r.Type_of_Test__c)</formula>
    <label>Type of Test</label>
    <type>Text</type>
</CustomField>