force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <description>The Vendor ID needed by Finance to send compensation to the tester.</description>
    <inlineHelpText>The Vendor ID needed by Finance to send compensation to the tester.</inlineHelpText>
    <label>Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>