force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Wear_Test__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test__c</fullName>
    <description>Field establishing the junction object relationship with Wear Test

Enter any text into the Wear Test Participant Name field.
A workflow will update the name to Participant Name-Wear Test</description>
    <inlineHelpText>Link to the Wear Test

Enter any text into the Wear Test Participant Name field.
A workflow will update the name to Participant Name-Wear Test</inlineHelpText>
    <label>Wear Test</label>
    <referenceTo>WT_Wear_Test__c</referenceTo>
    <relationshipLabel>Wear Test Participants</relationshipLabel>
    <relationshipName>WT_Product_Testers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>