force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Wear_Test_Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test_Participant_Status__c</fullName>
    <description>The testing status of a tester in a test.
Renamed from Product Tester Status</description>
    <inlineHelpText>The testing status of a tester in a test.</inlineHelpText>
    <label>Wear Test Participant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Testing In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>