force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Why_if_not_satisfied__c.field-meta.xml
<CustomField>
    <fullName>Why_if_not_satisfied__c</fullName>
    <description>Survey Question: If you would not be satisfied, why?</description>
    <inlineHelpText>Survey Question: If you would not be satisfied, why?</inlineHelpText>
    <label>Why, if not satisfied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>