force-app/main/default/objects/WT_Wear_Test_Participant__c/fields/Would_you_be_satisfied__c.field-meta.xml
<CustomField>
    <fullName>Would_you_be_satisfied__c</fullName>
    <description>Survey Question: Had you purchased the shoes would you be satisfied?</description>
    <inlineHelpText>Survey Question: Had you purchased the shoes would you be satisfied?</inlineHelpText>
    <label>Would you be satisfied?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>